horizontal scrollbar fix

--- a/style.scss
+++ b/style.scss
@@ -128,7 +128,8 @@ kbd{
 }
 
 .sidebar {
-    width: 238px;
+    width: 223px;
+    padding-right: 0;
     .mini-about{
         font-size: 13px;
     }
